--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=A)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
