Fonts, audio, and solar flare polish updates.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/GameMap.GameMap
-GameDefaultMap=/Game/Maps/GameMap.GameMap
+GameDefaultMap=/Game/Maps/Main.Main
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_GJGameMode.BP_GJGameMode_C
 
 [/Script/Engine.Engine]
