Final updates and fixes to the game. Fixes for crashing due to GetWorld() access violation. Committing some missing assets.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,7 @@ ProjectID=1CA8B90549F45799BCA1F6AC633BA1A7
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+
