--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,8 @@ GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_GJGameMode.BP_GJGameMode_C
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AmbientOcclusion=False
+
