Turned off all default settings for Post Processing. Created a Post Processing Volume with ONLY Bloom turned on. None of this seemed to make a significant difference in FPS

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,12 @@ GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_GJGameMode.BP_GJGameMode_C
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+r.UsePreExposure=False
+r.MobileHDR=False
+
