Turned on temporal upsampling so hopefully help performace. Didn't see much of a difference but the game does seem to be running at a more constant 30 FPS on my laptop so that's good I guess. Although I cannot tell where the gains came from

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,4 +81,6 @@ r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
 r.UsePreExposure=False
 r.MobileHDR=False
+r.DefaultFeature.AntiAliasing=2
+r.TemporalAA.Upsampling=True
 
